added profile for SCAPE1.4 and module to test the ingest of intellectual entities